Admin added and service fixed
