# app/Http/Controllers/AdminController.php
@@ -1,0 +1,13 @@
+<?php
+
+namespace App\Http\Controllers;
+
+use App\Models\User;
+
+class AdminController extends Controller
+{
+    public function getStatistics()
+    {
+        return "admin";
+    }
+}
