# storage/api-docs/api-docs.json
@@ -5,6 +5,24 @@
         "version": "1.0.0"
     },
     "paths": {
+        "/api/admin/statistics": {
+            "get": {
+                "tags": [
+                    "admin"
+                ],
+                "description": "Get Statistics",
+                "responses": {
+                    "200": {
+                        "description": "Get Statistics"
+                    }
+                },
+                "security": [
+                    {
+                        "sanctum": []
+                    }
+                ]
+            }
+        },
         "/api/comment": {
             "post": {
                 "tags": [
